--- a/templates/table-dsl/search.html
+++ b/templates/table-dsl/search.html
@@ -1,4 +1,4 @@
-<form method="get" class="mt-3 mx-2">
+<form method="get" class="mx-2">
     <div class="col-12">
         <input type="text" name="search" class="form-control form-control-sm shadow-sm" style="border-radius: 6px;"
                value="{{ search_value }}" placeholder="{{ search_placeholder }}"
